Irgendeine alte Version

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       --cell-radius: clamp(6px, 1.1vmin, 12px);
 
       --floor: #7a4a34;
+      --cube-border: #7a4a34;
+
+      --cube-wood-base: #d7c2a4;
+      --cube-wood-deep: #c9b08f;
+      --cube-wood-warm: rgba(155, 70, 110, 0.10);
+      --cube-wood-gold: rgba(249, 150, 30, 0.10);
 
       --slot-border: rgba(0,0,0,0.55);
       --slot-border-w: 2px;
@@ -29,6 +35,7 @@
       --btn-text: #2a160c;
       --btn-border: rgba(0,0,0,0.35);
 
+      /* Vorzeichen-Schalter, falls jemals nötig */
       --rotSign: 1;
     }
 
@@ -88,11 +95,18 @@
       --cell: calc((100% - 7 * var(--cell-gap)) / 8);
       --step: calc(var(--cell) + var(--cell-gap));
 
-      /* W2/W1 Basis links oben (Quelle) */
+      --axis-x: calc(4 * var(--step) - (var(--cell-gap) / 2));
+
+      /* W2 Basis links oben (B) */
       --cube-col: 1;
       --cube-row: 1;
+
       --cube-x: calc(var(--cube-col) * var(--step));
       --cube-y: calc(var(--cube-row) * var(--step));
+
+      /* Standard Cast (für normale Würfel-Schatten) */
+      --cast-x: 18px;
+      --cast-y: 18px;
 
       box-shadow:
         10px 18px 42px rgba(0,0,0,0.55),
@@ -129,13 +143,16 @@
       top:  var(--step);
       width: calc(6 * var(--cell) + 5 * var(--cell-gap));
       height: calc(6 * var(--cell) + 5 * var(--cell-gap));
+
       background:
         linear-gradient(135deg, rgba(255,255,255,0.18), rgba(0,0,0,0.06)),
         var(--floor);
+
       border-radius: 0;
       z-index: 2;
       pointer-events: none;
 
+      /* ✅ Innenschatten im Box-Inneren (Boden) */
       box-shadow:
         inset 18px 18px 34px rgba(255,255,255,0.10),
         inset -22px -22px 44px rgba(0,0,0,0.28),
@@ -163,24 +180,159 @@
       pointer-events: none;
     }
 
-    /* Quelle (unsichtbar) */
+    /* =========================================================
+       W2KIP + W1KIP (gespeichert, aber unsichtbar)
+       ========================================================= */
     .pairLayer{
       position:absolute;
       inset:0;
       z-index: 6;
       pointer-events:none;
+
+      transform-origin: var(--axis-x) 50%;
+      transform: scaleX(var(--pair-scale-x, 0.5));
+
+      /* ✅ im Hintergrund behalten */
       opacity: 0;
       visibility: hidden;
     }
 
-    /* W3 FINAL (unsichtbar, bleibt als Baustein) */
+    /* =========================================================
+       W2 FINAL (sichtbar): Q1, Slots: 2E 2F 3G 4G
+       (für später behalten – derzeit standardmäßig ausgeblendet)
+       ========================================================= */
+    .w2FinalLayer{
+      position:absolute;
+      inset:0;
+      z-index: 7;
+      pointer-events:none;
+
+      /* 👉 für diese Phase ausblenden (W3 FINAL steht im Fokus) */
+      opacity: 0;
+      visibility: hidden;
+    }
+
+    /* =========================================================
+       W3 FINAL (sichtbar): Q2, Slots: 5G 6G 7E 7F
+       ========================================================= */
     .w3FinalLayer{
       position:absolute;
       inset:0;
       z-index: 7;
       pointer-events:none;
-      opacity: 0;
-      visibility: hidden;
+    }
+
+    .cubeShadow{
+      position:absolute;
+      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      border-radius: clamp(10px, 2.2vmin, 18px);
+      background: transparent;
+      box-sizing: border-box;
+
+      box-shadow:
+        var(--cast-x) var(--cast-y) 18px rgba(0,0,0,0.35),
+        calc(var(--cast-x) * 0.55) calc(var(--cast-y) * 0.55) 10px rgba(0,0,0,0.22);
+
+      filter: blur(1px);
+    }
+
+    /* ✅ Neu: Schatten nach WEST + NORD (außen links/oben) – Werte aus bestehenden Schatten abgeleitet */
+    .cubeShadow::before,
+    .cubeShadow::after{
+      content:"";
+      position:absolute;
+      inset:0;
+      border-radius: inherit;
+      background: transparent;
+      box-sizing: border-box;
+      pointer-events:none;
+    }
+
+    /* außen links (West) */
+    .cubeShadow::before{
+      box-shadow:
+        calc(var(--cast-x) * -1) 0 18px rgba(0,0,0,0.35),
+        calc(var(--cast-x) * -0.55) 0 10px rgba(0,0,0,0.22);
+      filter: blur(1px);
+    }
+
+    /* außen oben (Nord) */
+    .cubeShadow::after{
+      box-shadow:
+        0 calc(var(--cast-y) * -1) 18px rgba(0,0,0,0.35),
+        0 calc(var(--cast-y) * -0.55) 10px rgba(0,0,0,0.22);
+      filter: blur(1px);
+    }
+
+    /* Shadows in Basis/KIP (unsichtbar) */
+    .pairLayer .cubeShadow.w2{ left: var(--cube-x); top: var(--cube-y); }
+    .pairLayer .cubeShadow.w1{ left: calc(4 * var(--step)); top: calc(1 * var(--step)); }
+
+    /* Shadow in W2 Final (Q1) */
+    .w2FinalLayer .cubeShadow.w2final{
+      left: calc(4 * var(--step));
+      top:  calc(1 * var(--step));
+    }
+
+    /* Shadow in W3 Final (Q2) */
+    .w3FinalLayer .cubeShadow.w3final{
+      left: calc(4 * var(--step));
+      top:  calc(4 * var(--step));
+    }
+
+    .cube,
+    .cube2,
+    .cubeFinal{
+      position:absolute;
+      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      box-sizing: border-box;
+
+      background:
+        radial-gradient(120% 90% at 15% 15%, var(--cube-wood-gold), transparent 55%),
+        radial-gradient(120% 90% at 25% 25%, var(--cube-wood-warm), transparent 60%),
+        repeating-linear-gradient(
+          20deg,
+          rgba(0,0,0,0.02) 0px,
+          rgba(0,0,0,0.02) 10px,
+          rgba(255,255,255,0.02) 10px,
+          rgba(255,255,255,0.02) 18px
+        ),
+        linear-gradient(135deg, rgba(255,255,255,0.16), rgba(0,0,0,0.08)),
+        linear-gradient(180deg, var(--cube-wood-base), var(--cube-wood-deep));
+
+      border: 4px solid var(--cube-border);
+      border-radius: clamp(10px, 2.2vmin, 18px);
+
+      box-shadow:
+        0 12px 22px rgba(0,0,0,0.28),
+        0 0 0 1px rgba(255,255,255,0.10) inset;
+
+      z-index: 6;
+    }
+
+    /* W2 Basis (links) */
+    .pairLayer .cube{
+      left: var(--cube-x);
+      top:  var(--cube-y);
+    }
+    /* W1 Basis (rechts) */
+    .pairLayer .cube2{
+      left: calc(4 * var(--step));
+      top:  calc(1 * var(--step));
+    }
+
+    /* W2 Final in Q1 */
+    .w2FinalLayer .cubeFinal{
+      left: calc(4 * var(--step));
+      top:  calc(1 * var(--step));
+    }
+
+    /* W3 Final in Q2 */
+    .w3FinalLayer .cubeFinal{
+      left: calc(4 * var(--step));
+      top:  calc(4 * var(--step));
     }
 
     .slot{
@@ -225,6 +377,7 @@
       position: relative;
     }
 
+    /* ✅ Punkt für 6 und 9: als "Satzpunkt" rechts daneben */
     .slot .num > span.dot::after{
       content:"";
       position:absolute;
@@ -232,18 +385,21 @@
       height: clamp(3px, 0.55vmin, 6px);
       border-radius: 50%;
       background: #111;
+
       left: 100%;
       top: 72%;
       transform: translate(25%, -50%);
+
       box-shadow: 0 1px 0 rgba(255,255,255,0.25);
     }
 
+    /* Leserichtungen */
     .read-south { --num-rot: calc(var(--rotSign) * 0deg); }
     .read-west  { --num-rot: calc(var(--rotSign) * 90deg); }
     .read-east  { --num-rot: calc(var(--rotSign) * -90deg); }
     .read-north { --num-rot: calc(var(--rotSign) * 180deg); }
 
-    /* Quelle Slots (W2/W1 intern) */
+    /* ===== Slot-Positionen (W2KIP/W1KIP) ===== */
     .slot-2b{ left: calc(var(--cube-x) + 0 * var(--step)); top:  calc(var(--cube-y) + 0 * var(--step)); }
     .slot-2c{ left: calc(var(--cube-x) + 1 * var(--step)); top:  calc(var(--cube-y) + 0 * var(--step)); }
     .slot-3d{ left: calc(var(--cube-x) + 2 * var(--step)); top:  calc(var(--cube-y) + 1 * var(--step)); }
@@ -253,6 +409,37 @@
     .slot2-2g{ left: calc(4 * var(--step) + 2 * var(--step)); top: calc(1 * var(--step) + 0 * var(--step)); }
     .slot2-3e{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(1 * var(--step) + 1 * var(--step)); }
     .slot2-4e{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(1 * var(--step) + 2 * var(--step)); }
+
+    /* ===== Slot-Positionen (W2 FINAL: 2E 2F 3G 4G) ===== */
+    .w2f-2e{ left: calc(4 * var(--step)); top: calc(1 * var(--step)); }               /* 2E */
+    .w2f-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }               /* 2F */
+    .w2f-3g{ left: calc(6 * var(--step)); top: calc(2 * var(--step)); }               /* 3G */
+    .w2f-4g{ left: calc(6 * var(--step)); top: calc(3 * var(--step)); }               /* 4G */
+
+    /* ===== Slot-Positionen (W3 FINAL in Q2: 5G 6G 7E 7F) ===== */
+    .w3f-5g{ left: calc(6 * var(--step)); top: calc(4 * var(--step)); }               /* 5G */
+    .w3f-6g{ left: calc(6 * var(--step)); top: calc(5 * var(--step)); }               /* 6G */
+    .w3f-7e{ left: calc(4 * var(--step)); top: calc(6 * var(--step)); }               /* 7E */
+    .w3f-7f{ left: calc(5 * var(--step)); top: calc(6 * var(--step)); }               /* 7F */
+
+    /* ✅ Divider bleibt im Code gespeichert, hier aber unsichtbar */
+    .divider-DE-rows2to4{
+      position:absolute;
+      left: calc(var(--axis-x) - 1px);
+      top:  calc(1 * var(--step));
+      height: calc(2 * var(--step) + var(--cell));
+      width: 2px;
+
+      background: rgba(234,215,190,0.5);
+      border-radius: 999px;
+      filter: blur(0.1px);
+
+      z-index: 9999;
+      pointer-events: none;
+
+      opacity: 0;
+      visibility: hidden;
+    }
 
     .controls{
       width: 100%;
@@ -282,6 +469,15 @@
       transform: translateY(1px) scale(0.99);
       filter: brightness(0.97);
     }
+
+    @keyframes popIn {
+      0%   { transform: rotate(var(--num-rot, 0deg)) scale(0.70); filter: brightness(1.05); }
+      60%  { transform: rotate(var(--num-rot, 0deg)) scale(1.10); }
+      100% { transform: rotate(var(--num-rot, 0deg)) scale(1.00); filter: none; }
+    }
+    .slot.pop .num > span{
+      animation: popIn 220ms ease-out;
+    }
   </style>
 </head>
 
@@ -292,21 +488,68 @@
       <div class="ball" aria-label="Kugel"></div>
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <!-- Quelle (unsichtbar): W2/W1 Basis -->
-      <div class="pairLayer" id="pairLayer">
-        <div class="slot slot-2b read-north" data-slot="S1"><div class="num"><span></span></div></div>
-        <div class="slot slot-2c read-north" data-slot="S2"><div class="num"><span></span></div></div>
-        <div class="slot slot-3d read-east"  data-slot="S3"><div class="num"><span></span></div></div>
-        <div class="slot slot-4d read-east"  data-slot="S4"><div class="num"><span></span></div></div>
+      <!-- =========================
+           W2KIP + W1KIP (unsichtbar, gespeichert)
+           ========================= -->
+      <div class="pairLayer" id="pairLayer" aria-label="W2+W1 als Gruppe (KIP, gespeichert)">
+        <div class="cubeShadow w2" aria-hidden="true"></div>
+        <div class="cubeShadow w1" aria-hidden="true"></div>
 
-        <div class="slot slot2-2f read-north" data-slot="T1"><div class="num"><span></span></div></div>
-        <div class="slot slot2-2g read-north" data-slot="T2"><div class="num"><span></span></div></div>
-        <div class="slot slot2-3e read-west"  data-slot="T3"><div class="num"><span></span></div></div>
-        <div class="slot slot2-4e read-west"  data-slot="T4"><div class="num"><span></span></div></div>
+        <!-- W2 (links) -->
+        <div class="cube" aria-label="W2 Basis/KIP"></div>
+
+        <!-- W1 (rechts) -->
+        <div class="cube2" aria-label="W1 Basis/KIP"></div>
+
+        <!-- ✅ Zeile 2: vom NORDEN lesbar -->
+        <div class="slot slot-2b read-north" data-slot="S1" aria-label="Slot 2B"><div class="num"><span></span></div></div>
+        <div class="slot slot-2c read-north" data-slot="S2" aria-label="Slot 2C"><div class="num"><span></span></div></div>
+
+        <!-- ✅ W2 Kontaktkante: Osten lesbar -->
+        <div class="slot slot-3d read-east" data-slot="S3" aria-label="Slot 3D"><div class="num"><span></span></div></div>
+        <div class="slot slot-4d read-east" data-slot="S4" aria-label="Slot 4D"><div class="num"><span></span></div></div>
+
+        <!-- ✅ Zeile 2 (W1): vom NORDEN lesbar -->
+        <div class="slot slot2-2f read-north" data-slot="T1" aria-label="Slot 2F"><div class="num"><span></span></div></div>
+        <div class="slot slot2-2g read-north" data-slot="T2" aria-label="Slot 2G"><div class="num"><span></span></div></div>
+
+        <!-- ✅ W1 Kontaktkante: Westen lesbar -->
+        <div class="slot slot2-3e read-west" data-slot="T3" aria-label="Slot 3E"><div class="num"><span></span></div></div>
+        <div class="slot slot2-4e read-west" data-slot="T4" aria-label="Slot 4E"><div class="num"><span></span></div></div>
       </div>
 
-      <!-- W3 FINAL (ausgeblendet, bleibt als Baustein) -->
-      <div class="w3FinalLayer" id="w3FinalLayer"></div>
+      <!-- =========================
+           W2 FINAL (im Code gespeichert, aktuell ausgeblendet)
+           ========================= -->
+      <div class="w2FinalLayer" id="w2FinalLayer" aria-label="W2 Final (Q1)">
+        <div class="cubeShadow w2final" aria-hidden="true"></div>
+        <div class="cubeFinal" aria-label="W2 Final Fläche"></div>
+
+        <div class="slot w2f-2e read-north" data-final="S1" aria-label="W2 Final 2E"><div class="num"><span></span></div></div>
+        <div class="slot w2f-2f read-north" data-final="S2" aria-label="W2 Final 2F"><div class="num"><span></span></div></div>
+        <div class="slot w2f-3g read-east"  data-final="S3" aria-label="W2 Final 3G"><div class="num"><span></span></div></div>
+        <div class="slot w2f-4g read-east"  data-final="S4" aria-label="W2 Final 4G"><div class="num"><span></span></div></div>
+      </div>
+
+      <!-- =========================
+           W3 FINAL (sichtbar) in Q2
+           Slots: 5G, 6G, 7E, 7F
+           - 5G/6G: vom OSTEN lesbar
+           - 7E/7F: vom SÜDEN lesbar
+           ========================= -->
+      <div class="w3FinalLayer" id="w3FinalLayer" aria-label="W3 Final (Q2)">
+        <div class="cubeShadow w3final" aria-hidden="true"></div>
+        <div class="cubeFinal" aria-label="W3 Final Fläche"></div>
+
+        <!-- Mapping: W3 Final nutzt U1..U4 (die 4 übrigen Random-Zahlen) -->
+        <div class="slot w3f-5g read-east"  data-w3final="U1" aria-label="W3 Final 5G"><div class="num"><span></span></div></div>
+        <div class="slot w3f-6g read-east"  data-w3final="U2" aria-label="W3 Final 6G"><div class="num"><span></span></div></div>
+        <div class="slot w3f-7e read-south" data-w3final="U3" aria-label="W3 Final 7E"><div class="num"><span></span></div></div>
+        <div class="slot w3f-7f read-south" data-w3final="U4" aria-label="W3 Final 7F"><div class="num"><span></span></div></div>
+      </div>
+
+      <!-- Divider bleibt im Code, ist hier aber unsichtbar -->
+      <div class="divider-DE-rows2to4" aria-hidden="true"></div>
     </div>
 
     <div class="controls">
@@ -319,8 +562,17 @@
     const grid = document.getElementById("grid");
     const btn = document.getElementById("btnBestuecken");
 
-    const srcSlotEls = Array.from(document.querySelectorAll(".pairLayer .slot"));
-    const srcSpans = new Map(srcSlotEls.map(s => [s.dataset.slot, s.querySelector(".num > span")]));
+    // Slots in W2KIP/W1KIP (unsichtbar) => Quelle
+    const slotEls = Array.from(document.querySelectorAll(".pairLayer .slot"));
+    const slotSpanEls = new Map(slotEls.map(s => [s.dataset.slot, s.querySelector(".num > span")]));
+
+    // Slots in W2 Final => Anzeige (gespeichert, aktuell ausgeblendet)
+    const w2FinalSlotEls = Array.from(document.querySelectorAll(".w2FinalLayer .slot"));
+    const w2FinalSpanEls = new Map(w2FinalSlotEls.map(s => [s.dataset.final, s.querySelector(".num > span")]));
+
+    // Slots in W3 Final => Anzeige (sichtbar)
+    const w3FinalSlotEls = Array.from(document.querySelectorAll(".w3FinalLayer .slot"));
+    const w3FinalSpanEls = new Map(w3FinalSlotEls.map(s => [s.dataset.w3final, s.querySelector(".num > span")]));
 
     function setBoardSquare(){
       const w = Math.round(boardEl.getBoundingClientRect().width);
@@ -368,6 +620,14 @@
       grid.dataset.built = "1";
     }
 
+    function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
+
+    function clearPops(){
+      slotEls.forEach(s => s.classList.remove("pop"));
+      w2FinalSlotEls.forEach(s => s.classList.remove("pop"));
+      w3FinalSlotEls.forEach(s => s.classList.remove("pop"));
+    }
+
     function setDot(span, number){
       if(!span) return;
       span.classList.remove("dot");
@@ -384,19 +644,85 @@
       return pool.slice(0, count);
     }
 
-    function setRandomNumbers(){
+    function syncW2FinalFromKip(){
+      // W2 Final zeigt S1..S4 exakt 1:1
+      ["S1","S2","S3","S4"].forEach(k => {
+        const src = slotSpanEls.get(k);
+        const dst = w2FinalSpanEls.get(k);
+        if(!src || !dst) return;
+        dst.textContent = src.textContent;
+        dst.classList.toggle("dot", src.classList.contains("dot"));
+      });
+    }
+
+    function syncW3FinalFromStore(store){
+      // store = Map(U1..U4 -> {text, dot})
+      ["U1","U2","U3","U4"].forEach(k => {
+        const dst = w3FinalSpanEls.get(k);
+        const v = store.get(k);
+        if(!dst || !v) return;
+        dst.textContent = v.text;
+        dst.classList.toggle("dot", !!v.dot);
+      });
+    }
+
+    function setRandomNumbers(withPop=false){
+      // 12 eindeutige Zahlen: 8 für W2/W1 (S/T), 4 für W3 (U)
       const nums = getUniqueRandomNumbers(12, 1, 12);
+
       const keysST = ["S1","S2","S3","S4","T1","T2","T3","T4"];
       keysST.forEach((k, idx) => {
-        const span = srcSpans.get(k);
+        const span = slotSpanEls.get(k);
         if(!span) return;
         const n = nums[idx];
         span.textContent = String(n);
         setDot(span, n);
       });
+
+      // W3-Store (U1..U4) – bleibt fix bis nächstes Mischen
+      const w3Store = new Map();
+      ["U1","U2","U3","U4"].forEach((k, i) => {
+        const n = nums[8 + i];
+        w3Store.set(k, { text: String(n), dot: (n === 6 || n === 9) });
+      });
+
+      // Final-Ansichten aktualisieren
+      syncW2FinalFromKip();
+      syncW3FinalFromStore(w3Store);
+
+      if (withPop){
+        // Pop auf sichtbaren Layern
+        for (const el of w3FinalSlotEls){
+          el.classList.remove("pop");
+          void el.offsetWidth;
+          el.classList.add("pop");
+        }
+        // (W2 final ist aktuell ausgeblendet – Pop kann trotzdem drin bleiben)
+        for (const el of w2FinalSlotEls){
+          el.classList.remove("pop");
+          void el.offsetWidth;
+          el.classList.add("pop");
+        }
+        setTimeout(clearPops, 260);
+      } else {
+        clearPops();
+      }
     }
 
-    btn.addEventListener("click", setRandomNumbers);
+    let busy = false;
+    async function runShuffle(){
+      if (busy) return;
+      busy = true;
+      btn.disabled = true;
+
+      setRandomNumbers(true);
+      await sleep(260);
+
+      btn.disabled = false;
+      busy = false;
+    }
+
+    btn.addEventListener("click", runShuffle);
 
     window.addEventListener("load", () => {
       setBoardSquare();
@@ -404,7 +730,7 @@
       setTimeout(setBoardSquare, 80);
 
       buildGridOnce();
-      setRandomNumbers();
+      setRandomNumbers(false);
     });
 
     window.addEventListener("resize", () => {
