Linie selber weiter rauf gesetzt.

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
       position:absolute;
       left: calc(4 * var(--step));
       top:  calc(4 * var(--step));
-      transform: translateY(-50%);
+      transform: translateY(calc(-50% -2));
       width: calc(3 * var(--cell) + 2 * var(--cell-gap));
       height: 2px;
 
