--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
 
       --axis-x: calc(4 * var(--step) - (var(--cell-gap) / 2));
 
+      /* ✅ Absolut saubere Mitte zwischen Q1 und Q2:
+         das ist die MITTE des GAPS zwischen Zeile 4 und 5 */
+      --seam-y: calc(4 * var(--step) - (var(--cell-gap) / 2));
+
       /* W2 Basis links oben */
       --cube-col: 1;
       --cube-row: 1;
@@ -104,13 +108,6 @@
 
       --cast-x: 18px;
       --cast-y: 18px;
-
-      /* ===== Feintuning für Mitte (dein Wunsch) =====
-         Linie: 4px nach Norden  => -4px
-         Paket: 2px nach Norden  => -2px
-      */
-      --seam-nudge-y: -4px;
-      --bundle-nudge-y: -2px;
 
       box-shadow:
         10px 18px 42px rgba(0,0,0,0.55),
@@ -230,11 +227,9 @@
       position:absolute;
       inset:0;
 
-      /* ✅ Paket 2px nach Norden (dein Wunsch) */
-      transform: translateY(var(--bundle-nudge-y)) scaleY(0.5);
-
-      /* ✅ Skalierachse = Trennlinie (Grenze Q1/Q2) */
-      transform-origin: 50% calc(4 * var(--step));
+      /* ✅ Skalierachse = exakt MITTE des GAPS (perfekt) */
+      transform-origin: 50% var(--seam-y);
+      transform: scaleY(0.5);
     }
 
     /* W2 FINAL (gespeichert, ausgeblendet) */
@@ -402,21 +397,23 @@
     .w3q1-midE{ left: calc(4 * var(--step) + 2 * var(--step)); top: calc(1 * var(--step) + 1 * var(--step)); }
     .w3q1-topE{ left: calc(4 * var(--step) + 2 * var(--step)); top: calc(1 * var(--step) + 0 * var(--step)); }
 
-    /* ✅ Trennlinie Q1/Q2 – LOSE Ebene, NICHT im skalierten Bundle */
+    /* ✅ Trennlinie Q1/Q2 – LOSE Ebene, NICHT im skalierten Bundle
+       Exakt mittig (Mitte des GAPS), ohne Pfusch-Offsets */
     .divider-Q1Q2{
       position:absolute;
       left: calc(4 * var(--step));
-      top:  calc(4 * var(--step) + var(--seam-nudge-y)); /* ✅ 4px nach Norden */
+      top:  var(--seam-y);
       width: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      height: 2px;
 
-      height: 1px;                      /* ✅ Hairline */
-      transform: translateY(-0.5px);    /* ✅ sauber mittig auf Pixelraster */
+      /* 2px Linie exakt zentrieren */
+      transform: translateY(-1px);
 
       background: rgba(234,215,190,0.55);
       border-radius: 999px;
       filter: blur(0.1px);
 
-      z-index: 20000; /* immer über allem */
+      z-index: 20000;
       pointer-events:none;
     }
 
